// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwitchComponent /> Should be able to render a active switch 1`] = `
<div
  class="sc-bdfBQB kDahIm"
  data-testid="switch-button"
>
  <div
    class="sc-gsTEea fpVGlI"
    data-testid="switch-button-aura"
  >
    <div
      class="sc-dlfnuX fRKrSx"
    />
  </div>
</div>
`;

exports[`<SwitchComponent /> Should be able to render a not active switch 1`] = `
<div
  class="sc-bdfBQB kVAGWU"
  data-testid="switch-button"
>
  <div
    class="sc-gsTEea cDUZgb"
    data-testid="switch-button-aura"
  >
    <div
      class="sc-dlfnuX eUkhDO"
    />
  </div>
</div>
`;

exports[`<SwitchComponent /> Should be able to render disabled switch 1`] = `
<div
  class="sc-bdfBQB gBzkXP"
  data-testid="switch-button"
  disabled=""
>
  <div
    class="sc-gsTEea kHcSHU"
    data-testid="switch-button-aura"
    disabled=""
  >
    <div
      class="sc-dlfnuX khbdAx"
      disabled=""
    />
  </div>
</div>
`;

exports[`<SwitchComponent /> Should be able to render the switch buttom with pressed Down and show aura 1`] = `
<div
  class="sc-gsTEea iehEnf"
  data-testid="switch-button-aura"
>
  <div
    class="sc-dlfnuX eUkhDO"
  />
</div>
`;

exports[`<SwitchComponent /> Should be able to render the switch buttom with pressed Up and show aura 1`] = `
<div
  class="sc-gsTEea iSyREL"
  data-testid="switch-button-aura"
>
  <div
    class="sc-dlfnuX eUkhDO"
  />
</div>
`;
